# vulcan

./: README.md  vulcan.cabal
src/Vulcan/: EitherT.hs  Prelude.hs
test/: test.hs
